@@ -3,8 +3,11 @@ CHANGE LOG
 =========================================================================
 
 Changes up to 1.00b19
+    
+    * pymol now draws h_bonds from proton to acceptor if proton present
+      and provided that h_bond_from_proton setting is true
 
-    * ray_scatter setting (gives a huge increase in image realism)
+    * ray_scatter setting (gives a nice increase in image realism)
 
     * ray_trace_trans_cutoff, ray_trace_persist_cutoff settings
 
